style the application

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 </head>
 <body>
     <div class="container-fluid">
-        <h3>Hello!</h4>
-            <p>This is a programme that will show you my name.</p>
-            <p><button>Click Here</button></p>
+        <div id="content">
+            <h3>Hello!</h4>
+                <p>This is a programme that will show you my name.</p>
+                <p><button>Click Here</button></p>
+        </div>
+       
     </div>
     <script src="JS/script.js"></script>    
 </body>
