--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="content">
             <h3>Hello!</h4>
                 <p>This is a programme that will show you my name.</p>
-                <p><button>Click Here</button></p>
+                <p><button id="button">Click Here</button></p>
         </div>
        
     </div>
