--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <h3>Hello!</h4>
                 <p>This is a programme that will show you my name.</p>
                 <p><button id="button">Click Here</button></p>
+                <p><span id="showname"></span></p>
         </div>
        
     </div>
